chore: configuration properties for java contention